# zlib

./: .gitignore  CMakeLists.txt  README.md  test_list.c  zlist.c
include/: zlist.h
tests/: test_list.c
